@@ -64,12 +64,12 @@ public class LevelDto implements Comparable<LevelDto> {
 	/**
 	 * The tree level no.
 	 */
-	private Integer treeLevelNo = new Integer("0");
+	private Integer treeLevelNo = Integer.valueOf("0");
 
 	/**
 	 * The hierarchy Id.
 	 */
-	private Integer hierarchyId = new Integer("0");
+	private Integer hierarchyId = Integer.valueOf("0");
 
 	/**
 	 * The hierarchy Indicator.
